# home-water-usage

./: .gitignore  CLAUDE.md  PRD.md  README.md  constitution.md  gmail_api_setup.md  my-vision.md  parameter_values.yaml  pyproject.toml  quickstart.md
.claude/skills/: README.md
.claude/skills/grill-me/: SKILL.md
.claude/skills/readme-wizard/: README.md
.claude/skills/speckit-analyze/: SKILL.md
.claude/skills/speckit-checklist/: SKILL.md
.claude/skills/speckit-clarify/: SKILL.md
.claude/skills/speckit-constitution/: SKILL.md
.claude/skills/speckit-implement/: SKILL.md
.claude/skills/speckit-plan/: SKILL.md
.claude/skills/speckit-specify/: SKILL.md
.claude/skills/speckit-tasks/: SKILL.md
.claude/skills/speckit-taskstoissues/: SKILL.md
.specify/: feature.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
specs/001-water-usage-cli/: data-model.md  plan.md  quickstart.md  research.md  spec.md  t036-validation.sh  tasks.md
specs/001-water-usage-cli/checklists/: pipeline-viz.md  requirements.md
src/home_water_usage/: auth.py  cli.py  config.py  fetch.py  graph.py  models.py  parse.py  status.py  storage.py
tests/: conftest.py  test_auth.py  test_cli.py  test_fetch.py  test_graph.py  test_integration.py  test_parse.py  test_storage.py
tests/fixtures/: message_detail_1.json  message_detail_2.json  message_detail_bad.json  messages_list.json  messages_list_empty.json
(+8 files in other folders)
