[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "home-water-usage"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "google-api-python-client>=2.0",
    "google-auth-oauthlib>=1.0",
    "seaborn>=0.13",
    "matplotlib>=3.8",
    "rich>=13.0",
    "PyYAML>=6.0",
]

[project.scripts]
home-water-usage = "home_water_usage.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/home_water_usage"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
